--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <section class="main-section animate__animated animate__zoomIn">
         <div class="main-section-content">
-          <h2>Hi, Selamat datang di Website KalMat Segitiga!</h2>
+          <h2>Hi, Selamat datang di Website KalMat Segitiga!!</h2>
           <p>Sebuah website yang digunakan untuk menghitung nilai luas dan keliling segitiga.</p>
           <br />
           <p>Semoga dapat membantu.</p>
